<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.profile.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/edit_profile"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/btnCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/done"
            android:src="@drawable/baseline_check_24"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:paddingBottom="30dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivEditProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CircularImage" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="@color/white"
            app:fabCustomSize="40dp"
            app:srcCompat="@drawable/baseline_camera_alt_24"
            android:contentDescription="@string/camera"/>
    </FrameLayout>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/border_background"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="16sp"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/border_background"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="16sp"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/border_background"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="20dp"
        android:textSize="16sp"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/border_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textSize="16sp"
        tools:ignore="Autofill,TextContrastCheck" />

</LinearLayout>