<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="32dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/circle_background" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adi Memes"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/post_image" />

    <TextView
        android:id="@+id/tvPostContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="I found a hidden gem in Uluwatu! #Pura"
        android:textSize="14sp"
        android:layout_marginBottom="16dp" />
    <ImageView
        android:id="@+id/ivLike"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_like"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/like_icon"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:background="@drawable/bg_share_something">

        <EditText
            android:id="@+id/editComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_a_comment"
            android:padding="16dp"
            android:textSize="14sp"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/buttonSendComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_send"
            android:contentDescription="@string/send_comment"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textCommentsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerComments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:clipToPadding="false" />

</LinearLayout>
